--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seed": "node seedDatabase.js"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +27,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.10",
+    "razorpay": "^2.9.6",
     "validator": "^13.11.0"
   }
 }
