Added Amazon S3 Storage For Archives Storage

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,14 @@ LOGIN_INSTRUCTIONS.md
 SEED_INSTRUCTIONS.md
 QUICK_START.md
 
+# AWS S3 Integration Guides
+AWS_S3_SETUP_GUIDE.md
+S3_INTEGRATION_SUMMARY.md
+GITHUB_SETUP_INSTRUCTIONS.md
+FIX_GITHUB_STATUS_ISSUE.md
+QUICK_START_FIXED.md
+PHONE_FIELD_MIGRATION_SUMMARY.md
+
 # Batch files (Windows helpers)
 *.bat
 install-razorpay.bat
