--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.913.0",
+    "@aws-sdk/lib-storage": "^3.913.0",
+    "@aws-sdk/s3-request-presigner": "^3.913.0",
+    "@octokit/rest": "^22.0.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.2.0",
