Remove additional utility and test files from git tracking
- Removed server/validateAWSCredentials.js (AWS validation utility)
- Removed server/seedDatabase.js (database seeding script)
- Removed server/createAdmin.js (admin creation utility)
- Updated .gitignore to include these files
- These are development utilities that should not be in production repository

--- a/.gitignore
+++ b/.gitignore
@@ -76,10 +76,12 @@ restart-backend.bat
 server/testCloudinary.js
 server/createTestUser.js
 server/createUserWithFines.js
+server/createAdmin.js
 server/checkPhoneField.js
 server/testS3Integration.js
 server/test*.js
 server/validateAWSCredentials.js
+server/seedDatabase.js
 
 # Uploads and temp files
 /tmp/
