--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node seedDatabase.js"
+    "seed": "node seedDatabase.js",
+    "pm2:start": "pm2 start ecosystem.config.js --env production",
+    "pm2:stop": "pm2 stop library-management-api",
+    "pm2:restart": "pm2 restart library-management-api",
+    "pm2:logs": "pm2 logs library-management-api"
   },
   "author": "",
   "license": "ISC",
