--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.44.0",
     "vite": "^6.0.5"
   }
 }
