--- a/client/vercel.json
+++ b/client/vercel.json
@@ -4,10 +4,10 @@
   "env": {
     "VITE_API_URL": "@vite_api_url"
   },
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
