--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "lucide-react": "^0.469.0",
