Add custom in-app confirmation modals for book return and renewal actions

--- a/server/config/config.prod.env.template
+++ b/server/config/config.prod.env.template
@@ -5,7 +5,7 @@ NODE_ENV=production
 PORT=4000
 
 # Database - Use your production MongoDB URI
-MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/MERN_STACK_LIBRARY_MANAGEMENT?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT Configuration - Generate a strong secret key
 JWT_SECRET_KEY=your-super-secure-jwt-secret-key-here-change-this-in-production
