--- a/server/config/config.prod.env
+++ b/server/config/config.prod.env
@@ -3,7 +3,7 @@ NODE_ENV=production
 PORT=4000
 
 # Database - Use your production MongoDB URI
-MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/MERN_STACK_LIBRARY_MANAGEMENT?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT Configuration - Set these in your production environment
 JWT_SECRET_KEY=your-super-secure-jwt-secret-key-here-change-this-in-production
