Remove all jpg, jpeg, and webp files from git tracking (now on Cloudinary)

--- a/.gitignore
+++ b/.gitignore
@@ -91,10 +91,9 @@ uploads/
 *.tmp
 
 # Static images now hosted on Cloudinary
-client/public/images/baackground.jpeg
-client/public/images/baackground.webp
-client/public/images/iiitdm-logo.jpeg
-client/public/images/iiitdm-logo.webp
+*.jpg
+*.jpeg
+*.webp
 
 # Cache
 .cache/
